# wallpaper-vault

./: .cursorrules  .gitignore  LICENSE  README.md  gitignore  package-lock.json  package.json  pr_body.md
backend/: .coverage  .env.example  README.md  backfill.py  entrypoint.py  faceless_report.txt  openapi.json  pyproject.toml  pytest.ini  wallpaper-vault-backend.spec
backend/app/: main.py
backend/app/api/: __init__.py  audit.py  characters.py  creators.py  dashboard.py  deps.py  franchises.py  images.py  playlists.py  rotation_history.py  rotation_profiles.py  rotation_rules.py  search.py  sets.py  settings.py  tags.py  thumbnails.py
backend/app/core/: config.py  crop.py  enums.py  exceptions.py  logging.py  rotation.py  tasks.py  utils.py
backend/app/crud/: character.py  creator.py  dashboard.py  franchise.py  image.py  playlist.py  rotation_rule.py  set.py  settings.py  tag.py
backend/app/db/: session.py
backend/scripts/: backfill_metadata.py  batch_import_and_organize.py  check_broken_paths.py  check_phash.py  final_organization_pass.py  find_duplicates.py  identify_unorganized_matches.py  match_unorganized_to_existing.py  migrate_sets.py
backend/tests/: conftest.py  test_advanced.py  test_ai_tagging.py  test_api.py  test_api_crop.py  test_api_security.py  test_audit.py  test_audit_advanced.py  test_batch_import.py  test_bulk_delete.py  test_characters_franchises.py  test_core_flow.py  test_crop.py  test_images_import.py  test_media.py  test_os_agnostic.py  test_playlist.py  test_rotation_rules.py  test_sets.py  test_system.py  test_tags.py  utils.py
(+453 files in other folders)
