[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Wallpaper Vault — manages a SQLite-backed wallpaper library with saliency-aware cropping, batch import, and audit tools."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.2",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
    "numpy>=2.2.3",
    "opencv-contrib-python>=4.13.0.92",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.ruff.lint]
select = ["E", "F", "D100", "PLR2004"]
ignore = ["D104", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "PLR2004"]
